--- a/rave-app/pom.xml
+++ b/rave-app/pom.xml
@@ -11,15 +11,15 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.3.RELEASE</version>
+		<version>2.3.2.RELEASE</version>
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
-		<springboot.version>1.4.3.RELEASE</springboot.version>
+		<java.version>14</java.version>
+		<springboot.version>2.2.6.RELEASE</springboot.version>
 		<hz.version>3.7.2</hz.version>
-		<swagger2.version>2.6.1</swagger2.version>
+		<swagger2.version>2.7.0</swagger2.version>
 		<swaggerui.version>2.6.1</swaggerui.version>
 		<google.api.version>1.20.0</google.api.version>
 	</properties>
@@ -44,24 +44,46 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
+		<dependency>    
+		    <groupId>org.springframework.boot</groupId>    
+		    <artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>		
 		<!-- SWAGGER -->
+		
 		<dependency>
 			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>${swagger2.version}</version>
-		</dependency>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>	
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>${swaggerui.version}</version>
-		</dependency>
-
-		<!-- -->
+		  <groupId>jakarta.xml.bind</groupId>
+		  <artifactId>jakarta.xml.bind-api</artifactId>
+		  </dependency>			
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.3.2</version>
 		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>io.springfox</groupId> -->
+<!-- 			<artifactId>springfox-swagger2</artifactId> -->
+<!-- 			<version>${swagger2.version}</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>io.springfox</groupId> -->
+<!-- 			<artifactId>springfox-swagger-ui</artifactId> -->
+<!-- 			<version>${swaggerui.version}</version> -->
+<!-- 		</dependency> -->
+
+<!-- 		<dependency> -->
+<!-- 		  <groupId>jakarta.xml.bind</groupId> -->
+<!-- 		  <artifactId>jakarta.xml.bind-api</artifactId> -->
+<!-- 		  <version>2.3.3</version> -->
+<!-- 		</dependency>		 -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.commons</groupId> -->
+<!-- 			<artifactId>commons-lang3</artifactId> -->
+<!-- 			<version>3.3.2</version> -->
+<!-- 		</dependency> -->
 
 		<dependency>
 			<groupId>org.mockito</groupId>
@@ -78,6 +100,12 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
+<!-- 		<dependency>  -->
+<!-- 				<groupId>com.fasterxml.jackson.core</groupId>  -->
+<!-- 				<artifactId>jackson-databind</artifactId>  -->
+<!-- 				<version>2.9.4</version>  -->
+<!-- 		</dependency>  -->
+
 
 		<dependency>
 			<groupId>org.hamcrest</groupId>
@@ -170,9 +198,9 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-client -->
 		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-client</artifactId>
-			<version>1.19.3</version>
+		    <groupId>com.sun.jersey</groupId>
+		    <artifactId>jersey-client</artifactId>
+		    <version>1.19.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.socrata</groupId>
@@ -188,6 +216,11 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
